--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "9001:9001"
     volumes:
-    - /opt/calm/files:/files
+    - /opt/calm:/files
   web:
     container_name: nginx
     image: nginx:stable
@@ -29,8 +29,4 @@ services:
       - "80:80"
     volumes:
     - /opt/calm/conf.d:/etc/nginx/conf.d
-    - /opt/calm/files:/files
-
-    
-
-    
+    - /opt/calm:/files
